--- a/index.html
+++ b/index.html
@@ -2,22 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Site da nayara</title>
+    <title>Estagiários</title>
   </head>
   <body>
-    <img src="imagens/imagem-13.jpg" /><br />
-    <img src="imagens/imagem-14.jpg" /><br />
-    <img src="imagens/imagem-1.jpg" /><br />
-    <img src="imagens/imagem-2.jpg" /><br />
-    <img src="imagens/imagem-3.jpg" /><br />
-    <img src="imagens/imagem-4.jpg" /><br />
-    <img src="imagens/imagem-5.jpg" /><br />
-    <img src="imagens/imagem-6.jpg" /><br />
-    <img src="imagens/imagem-7.jpg" /><br />
-    <img src="imagens/imagem-8.jpg" /><br />
-    <img src="imagens/imagem-9.jpg" /><br />
-    <img src="imagens/imagem-10.jpg" /><br />
-    <img src="imagens/imagem-11.jpg" /><br />
-    <img src="imagens/imagem-12.jpg" /><br />
+  Branch novo
   </body>
 </html>
